# didkit-python

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
didkit/: __init__.py
examples/python-flask/: .gitignore  README.md  pyproject.toml
examples/python-flask/didkit_flask/: issue_credential.py  issue_presentation.py  main.py  verify_credential.py  verify_presentation.py
examples/python-flask/didkit_flask/templates/: index.html  issue_vc.html  issue_vp.html  verify_vc.html  verify_vp.html
examples/python_django/: .gitignore  README.md  manage.py  pyproject.toml
examples/python_django/didkit_django/: issue_credential.py  views.py
examples/python_django/python_django/: urls.py
pydidkit_tests/: README.md  pyproject.toml
pydidkit_tests/src/pydidkit_tests/: test_main.py
src/: lib.rs
tests/: test_main.py
