[package]
name = "didkit"
version = "0.3.3"
authors = ["Spruce Systems, Inc."]
edition = "2018"
description = "Library for Verifiable Credentials and Decentralized Identifiers."
license = "Apache-2.0"
homepage = "https://spruceid.dev/docs/didkit/"
repository = "https://github.com/spruceid/didkit/"
keywords = ["ssi", "did", "python"]
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
didkit_core = { version = "0.5", package = "didkit" }
serde_json = "1.0"

pyo3 = { version = "0.18", features = ["extension-module"] }
pyo3-asyncio = { version = "0.18", features = ["tokio-runtime"] }
tokio = "1.26"

[build-dependencies]
pyo3-build-config = "0.18"
