[tool.poetry]
name = "pydidkit_tests"
version = "0.1.0"
description = "Python tests for DIDKit"
authors = ["Simon Bihel <simon.bihel@spruceid.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.0.1"
pytest-asyncio = "^0.18.2"
didkit = {path = "../target/wheels/didkit-0.3.1-cp38-cp38-manylinux_2_31_x86_64.whl"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
