[tool.poetry]
name = "didkit_flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
main = "didkit_flask.main:main"

[tool.poetry.dependencies]
python = "^3.7"
Flask = {extras = ["async"], version = "^2.2.2"}
Flask-QRcode = "^3.1.0"
didkit = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
